// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EC - Icon Branded - icon facebook renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--facebook"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon instagram renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--instagram"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon linkedin renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--linkedin"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon pinterest renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--pinterest"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon rss renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--rss"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon skype renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--skype"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon twitter renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--twitter"
    />
  </svg>
</test>
`;

exports[`EC - Icon Branded - icon youtube renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#branded--youtube"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon audio renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--audio"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon book renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--book"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon calendar renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--calendar"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon copy renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--copy"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon digital renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--digital"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon edit renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--edit"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon faq renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--faq"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon feedback renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--feedback"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon file renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--file"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon gear renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--gear"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon generic-lang renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--generic-lang"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon global renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--global"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon growth renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--growth"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon hamburger renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--hamburger"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon image renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--image"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon infographic renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--infographic"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon language renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--language"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon livestreaming renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--livestreaming"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon location renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--location"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon log-in renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--log-in"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon logged-in renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--logged-in"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon multiple-files renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--multiple-files"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon organigram renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--organigram"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon print renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--print"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon regulation renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--regulation"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon search renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--search"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon share renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--share"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon spinner renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--spinner"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon spreadsheet renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--spreadsheet"
    />
  </svg>
</test>
`;

exports[`EC - Icon General - icon video renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--video"
    />
  </svg>
</test>
`;

exports[`EC - Icon Generic tests - Any icon renders correctly with extra attributes 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--audio"
    />
  </svg>
</test>
`;

exports[`EC - Icon Generic tests - Any icon renders correctly with extra class names 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m custom-class custom-class--test"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--audio"
    />
  </svg>
</test>
`;

exports[`EC - Icon Notifications - icon error renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--error"
    />
  </svg>
</test>
`;

exports[`EC - Icon Notifications - icon information renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--information"
    />
  </svg>
</test>
`;

exports[`EC - Icon Notifications - icon success renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--success"
    />
  </svg>
</test>
`;

exports[`EC - Icon Notifications - icon warning renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#notifications--warning"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon check renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--check"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon check-filled renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--check-filled"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon close renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--close"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon close-filled renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--close-filled"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon corner-arrow renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--corner-arrow"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon download renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--download"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon external renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--external"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon fullscreen renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--fullscreen"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon minus renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--minus"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon plus renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--plus"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon rounded-arrow renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--rounded-arrow"
    />
  </svg>
</test>
`;

exports[`EC - Icon UI - icon solid-arrow renders correctly 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="/icons.svg#general--solid-arrow"
    />
  </svg>
</test>
`;

exports[`EC - Icon with validation enabled and missing input data returns the right warning message 1`] = `
<test>
  <svg
    aria-hidden="true"
    class="ecl-icon ecl-icon--m"
    focusable="false"
  >
    <use
      xlink:href="#check-filled"
    />
  </svg>
  <!-- ecl2-compliance: icon -->
  <div
    class="ecl2-compliance ecl-u-border-width-1 ecl-u-border-color-red ecl-u-border-style-solid ecl-u-ma-xs ecl-u-pr-s ecl-u-bg-white"
  >
    <p
      class="ecl-u-type-color-grey ecl-u-ml-m ecl-u-type-xs"
    >
      [icon] - {{ icon.name }} and {{ icon.path }} properties need to set and filled in.
    </p>
  </div>
</test>
`;
